- add npm scripts - update readme - make edit and delete button to go under the menu on mobile devices - add loading indicator to user profile - fix unit tests - add documentation

--- a/client/src/app/core/components/view-entity/view-entity.component.scss
+++ b/client/src/app/core/components/view-entity/view-entity.component.scss
@@ -19,7 +19,7 @@
 
 .code-content {
   flex: 1 1 auto;
-  margin: 0px 30px 10px 0px;
+  margin-bottom: 10px;
 }
 
 pre {
